tempo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo
  namespace: monitoring
  labels:
    app: tempo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tempo
  template:
    metadata:
      labels:
        app: tempo
    spec:
      containers:
      - name: tempo
        image: grafana/tempo:latest
        args: [ "-config.file=/etc/tempo/tempo-config.yaml" ]
        ports:
          - name: tempo
            containerPort: 3200
          - name: otlp-grpc
            containerPort: 4317
          - name: otlp-http
            containerPort: 4318
        volumeMounts:
          - name: tempo-volume
            mountPath: /etc/tempo
          - name: tempo-config-volume
            mountPath: /etc/tempo/tempo-config.yaml
            subPath: tempo-config.yaml
      volumes:
        - name: tempo-volume
          persistentVolumeClaim:
            claimName: tempo-pvc
        - name: tempo-config-volume
          configMap:
            name: tempo-config
