tempo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tempo-service
  labels:
    app: tempo-service
  namespace: monitoring
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: tempo
  type: ClusterIP
