tempo/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tempo-ingress-route
  namespace: monitoring
spec:
  entryPoints:
  - websecure
  - web
  routes:
  - kind: Rule
    match: Host(`tempo.mw.local`)
    priority: 10
    services:
    - name: tempo-service
      port: 80
